--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     flex-direction: column;
     height: 100vh;
     overflow: hidden;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .header{
